# LCM_robotics

./: .gitignore  CMakeLists.txt
Server/: CMakeLists.txt
Server/src/: bridge.cpp  publisher.cpp  sender.cpp  subscriber.cpp
Server/src/LCM_types/: Angles.lcm  helloworld.lcm  ledState.lcm
Server/src/LCM_types/Angles/: MotorCommand.hpp
Server/src/LCM_types/my_types/: example.hpp  ledState.hpp
Server/src/my_types/: example.hpp
client/: platformio.ini
client/include/: Encoder.hpp  Motor.hpp
client/lib/Encoder/: library.json
client/lib/Encoder/src/: Encoder.hpp
client/lib/Motor/: library.json
client/lib/Motor/src/: Motor.cpp  Motor.hpp
client/src/CrealityStm/: test.cpp
client/src/esp32/: Encoder.cpp  Motor.cpp  main.cpp  test.cpp
client/test/: motorCp.cpp
src/: bridge.cpp
src/my_types/: ledState.hpp
